scripts/nullaway/annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8.txt
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/swing/TetrisGameSwing.java:269: error: [NullAway] dereferenced expression piece is @Nullable
        for(int j=0; j<piece.getSize(); j++){
                            ^
    (see http://t.uber.com/nullaway )
../annotator/url063b9533f6_karlney_tetris_ai_tgz-pJ8-karlney_tetris_cmd_TetrisGameRunnerJ8/src/karlney/tetris/ai/AIPlayer.java:69: error: [NullAway] assigning @Nullable expression to @NonNull field
            currentPiece = destinationPiece;
                         ^
    (see http://t.uber.com/nullaway )
2 errors
